# ns3-simulation

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cc  ns-3-dev  ns-3.27  ns-3.44  simu.cc
include/: includes.h  log.h  main.h  simu.h  util.h
plotter/: plot.pcap.py  plot.py  plotv2.py  plotv3.py  plotv4.py  plotv5.py
results/: Station-1-1_IO_GRAPH
results/results1/: results1.txt
simulation_3.27/: CMakeLists.txt  main.cc
simulation_3.27/include/: includes.h  log.h  main.h  util.h
simulation_3.27/src/: log.cc
simulation_3.44/: AccessPoint-0-1.pcap  CMakeLists.txt  CMakeLists.txt.n  Station-1-1.pcap  copy.sh  env.copy.txt  main.cc
simulation_3.44/include/: includes.h  log.h  logger.h  main.h  main_util.h  pathloss.h  propagation.h  util.h
simulation_3.44/src/: log.cc  logger.cc  main_util.cc  pathloss.cc  propagation.cc  util.cc
src/: log.cc  pathloss.cc  util.cc
